The site is deployed successfully

--- a/.env.example
+++ b/.env.example
@@ -11,22 +11,25 @@ AWS_PROFILE=your-profile-name
 
 # Domain Configuration
 # Your primary domain name (without www)
-DOMAIN_NAME=yourdomain.com
+DOMAIN_NAME=gravyprompts.com
 
 # CDK Configuration
 CDK_DEFAULT_ACCOUNT=123456789012
 CDK_DEFAULT_REGION=us-east-1
 
 # Application Configuration
-APP_NAME=your-app-name
-APP_DESCRIPTION="Your application description"
+APP_NAME=gravy-prompts
+APP_DESCRIPTION="Store, share, populate, and rate your AI prompt templates"
 
 # AWS Stack Configuration
 # Stack prefix for AWS CloudFormation stacks (defaults to uppercase APP_NAME)
-STACK_PREFIX=YOURAPP
+STACK_PREFIX=GRAVYPROMPTS
 
 # Optional: Environment
 ENVIRONMENT=development
+
+# Optional: Existing Certificate ARN (to reuse certificate)
+# CERTIFICATE_ARN=arn:aws:acm:us-east-1:123456789012:certificate/abc-def-ghi
 
 # Optional: Additional API Keys or Services
 # Add any additional environment variables your application needs
