--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "nextjs-aws-template",
+  "name": "gravy-prompts",
   "version": "0.1.0",
   "private": true,
-  "description": "A production-ready Next.js template with AWS CDK, Google Analytics, Google AdSense, and Tailwind CSS",
+  "description": "Store, share, populate, and rate your AI prompt templates - The ultimate prompt management platform",
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:all": "concurrently --names \"nextjs,gravyjs\" --prefix-colors \"blue.bold,green.bold\" \"next dev --turbopack -p 6827\" \"cd GravyJS/demo && npm run dev\"",
     "build": "next build",
-    "start": "next start",
+    "build:all": "npm run build && cd GravyJS && npm run build",
+    "start": "concurrently --names \"nextjs,gravyjs\" --prefix-colors \"blue.bold,green.bold\" \"next start -p 6827\" \"cd GravyJS/demo && npm run dev\"",
+    "start:next": "next start -p 6827",
+    "start:demo": "cd GravyJS/demo && npm run dev",
     "lint": "next lint",
     "build:cdk": "cd cdk && rm -f lib/*.d.ts lib/*.js && npm run build",
     "cdk:install": "cd cdk && npm install",
     "cdk:synth": "cd cdk && npx cdk synth",
     "deploy:foundation": "./scripts/deploy-foundation.sh",
-    "deploy:cert": "./scripts/deploy-cert.sh",
+    "deploy:cert:first": "./scripts/deploy-cert-first.sh",
+    "check:cert": "./scripts/check-certificate.sh",
     "deploy:edge": "./scripts/deploy-edge-functions.sh",
     "deploy:waf": "./scripts/deploy-waf.sh",
     "deploy:cdn": "./scripts/deploy-cdn.sh --nextjs",
@@ -34,6 +39,7 @@
     "todo:progress": "./scripts/update-todos.sh progress"
   },
   "dependencies": {
+    "gravyjs": "file:./GravyJS",
     "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -43,6 +49,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.8",
     "postcss": "^8",
