--- a/cdk/package.json
+++ b/cdk/package.json
@@ -20,6 +20,8 @@
     "typescript": "~5.3.3"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.11.2",
+    "aws-amplify": "^6.15.0",
     "aws-cdk-lib": "^2.198.0",
     "constructs": "^10.0.0"
   }
