Got the full site up and running.

--- a/.env.local.example
+++ b/.env.local.example
@@ -11,3 +11,8 @@ NEXT_PUBLIC_COGNITO_CLIENT_ID_DEV=XXXXXXXXXXXXXXXXXXXXXXXXX
 # AWS Cognito - Production
 NEXT_PUBLIC_COGNITO_USER_POOL_ID_PROD=us-east-1_XXXXXXXXX
 NEXT_PUBLIC_COGNITO_CLIENT_ID_PROD=XXXXXXXXXXXXXXXXXXXXXXXXX
+
+# API Gateway URL
+# For local development with SAM: http://localhost:7429
+# For AWS deployment: Get URL from 'npm run deploy:api' output
+NEXT_PUBLIC_API_URL=http://localhost:7429
