--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gravy-prompts",
+  "name": "gravyprompts",
   "version": "0.1.0",
   "private": true,
-  "description": "Store, share, populate, and rate your AI prompt templates - The ultimate prompt management platform",
+  "description": "Store, share, populate, and rate your AI prompt templates. The ultimate prompt management platform for AI enthusiasts and professionals.",
   "scripts": {
     "dev": "next dev --turbopack",
-    "dev:all": "concurrently --names \"nextjs,gravyjs\" --prefix-colors \"blue.bold,green.bold\" \"next dev --turbopack -p 6827\" \"cd GravyJS/demo && npm run dev\"",
+    "dev:all": "./scripts/dev-all.sh",
     "build": "next build",
     "build:all": "npm run build && cd GravyJS && npm run build",
     "start": "concurrently --names \"nextjs,gravyjs\" --prefix-colors \"blue.bold,green.bold\" \"next start -p 6827\" \"cd GravyJS/demo && npm run dev\"",
@@ -24,9 +24,23 @@
     "deploy:app": "./scripts/deploy-app-content.sh",
     "deploy:monitoring": "./scripts/deploy-monitoring.sh",
     "deploy:auth": "./scripts/deploy-auth.sh",
+    "deploy:api": "./scripts/deploy-api.sh",
     "deploy:all": "./scripts/deploy-all-decoupled.sh --nextjs",
     "deploy:all:decoupled": "./scripts/deploy-all-decoupled.sh --nextjs",
     "status": "./scripts/check-stack-status.sh",
+    "local:install": "cd cdk/local-test && npm install",
+    "local:setup": "cd cdk/local-test && docker-compose up -d && sleep 5 && npm install && node setup-local-db.js",
+    "local:start": "cd cdk/local-test && ./run-local.sh",
+    "local:tables": "cd cdk/local-test && node setup-local-db.js",
+    "local:api": "cd cdk/local-test && ./run-local.sh",
+    "local:stop": "cd cdk/local-test && docker-compose down",
+    "local:logs": "docker logs gravyprompts-dynamodb-local",
+    "local:cleanup": "./scripts/cleanup-local.sh",
+    "local:test": "cd cdk/local-test && ./test-api.sh",
+    "local:test:unit": "cd cdk/lambda/templates && IS_LOCAL=true node local-test.js",
+    "local:fix-auth": "./scripts/fix-local-auth.sh",
+    "test:infra": "./scripts/test-infrastructure.sh",
+    "pre-flight": "./scripts/pre-flight-check.sh",
     "status:all": "./scripts/check-all-stacks.sh",
     "destroy:waf": "./scripts/destroy-waf.sh",
     "destroy:monitoring": "./scripts/destroy-monitoring.sh",
