First pass at amplify

--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "deploy:monitoring": "./scripts/deploy-monitoring.sh",
     "deploy:auth": "./scripts/deploy-auth.sh",
     "deploy:api": "./scripts/deploy-api.sh",
-    "deploy:all": "./scripts/deploy-all-decoupled.sh --nextjs",
-    "deploy:all:decoupled": "./scripts/deploy-all-decoupled.sh --nextjs",
+    "deploy:all": "./scripts/deploy-all-amplify.sh",
+    "deploy:all:s3": "./scripts/deploy-all-decoupled.sh --nextjs",
+    "deploy:backend": "./scripts/deploy-amplify-backend.sh",
     "status": "./scripts/check-stack-status.sh",
     "local:install": "cd cdk/local-test && npm install",
     "local:setup": "cd cdk/local-test && docker-compose up -d && sleep 5 && npm install && node setup-local-db.js",
@@ -45,9 +46,12 @@
     "destroy:waf": "./scripts/destroy-waf.sh",
     "destroy:monitoring": "./scripts/destroy-monitoring.sh",
     "destroy:all": "./scripts/destroy-all.sh",
+    "destroy:frontend": "./scripts/destroy-frontend-stacks.sh",
+    "fix:foundation": "./scripts/fix-foundation-deletion.sh",
     "maintenance:on": "./scripts/maintenance-mode.sh on",
     "maintenance:off": "./scripts/maintenance-mode.sh off",
     "maintenance:update": "./scripts/maintenance-mode.sh update",
+    "amplify:setup": "echo 'Run AWS Amplify Console setup - see AMPLIFY_SETUP.md'",
     "deploy:force": "./scripts/force-update.sh",
     "todo": "./scripts/update-todos.sh show",
     "todo:add": "./scripts/update-todos.sh add",
