--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "description": "Store, share, populate, and rate your AI prompt templates. The ultimate prompt management platform for AI enthusiasts and professionals.",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
+    "postinstall": "node scripts/setup-gravyjs.js",
     "dev": "next dev --turbopack",
     "dev:all": "./scripts/dev-all.sh",
     "build": "next build",
     "build:all": "npm run build && cd GravyJS && npm run build",
-    "start": "concurrently --names \"nextjs,gravyjs\" --prefix-colors \"blue.bold,green.bold\" \"next start -p 6827\" \"cd GravyJS/demo && npm run dev\"",
+    "start": "next start -p 6827",
     "start:next": "next start -p 6827",
-    "start:demo": "cd GravyJS/demo && npm run dev",
+    "start:demo": "cd packages/gravyjs-demo && npm run dev",
     "lint": "next lint",
     "build:cdk": "cd cdk && rm -f lib/*.d.ts lib/*.js && npm run build",
     "cdk:install": "cd cdk && npm install",
@@ -56,11 +60,18 @@
     "todo": "./scripts/update-todos.sh show",
     "todo:add": "./scripts/update-todos.sh add",
     "todo:complete": "./scripts/update-todos.sh complete",
-    "todo:progress": "./scripts/update-todos.sh progress"
+    "todo:progress": "./scripts/update-todos.sh progress",
+    "demo:dev": "cd packages/gravyjs-demo && npm run dev",
+    "demo:build": "cd packages/gravyjs-demo && npm run build",
+    "demo:preview": "cd packages/gravyjs-demo && npm run preview",
+    "demo:setup": "cd packages/gravyjs-demo && npm run setup",
+    "demo:deploy": "cd packages/gravyjs-demo && npm run deploy",
+    "demo:check:redirect": "cd packages/gravyjs-demo && npm run check:redirect",
+    "demo:debug": "cd packages/gravyjs-demo && npm run debug"
   },
   "dependencies": {
     "aws-amplify": "^6.15.0",
-    "gravyjs": "github:jimmypocock/GravyJS",
+    "gravyjs": "*",
     "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
