--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "next dev --turbopack",
     "dev:all": "./scripts/dev-all.sh",
     "build": "next build",
-    "build:all": "npm run build && cd GravyJS && npm run build",
+    "build:all": "npm run build && cd packages/gravyjs && npm run build",
     "start": "next start -p 6827",
     "start:next": "next start -p 6827",
     "start:demo": "cd packages/gravyjs-demo && npm run dev",
@@ -24,13 +24,12 @@
     "check:cert": "./scripts/check-certificate.sh",
     "deploy:edge": "./scripts/deploy-edge-functions.sh",
     "deploy:waf": "./scripts/deploy-waf.sh",
-    "deploy:cdn": "./scripts/deploy-cdn.sh --nextjs",
+    "deploy:cdn": "./scripts/deploy-cdn.sh",
     "deploy:app": "./scripts/deploy-app-content.sh",
     "deploy:monitoring": "./scripts/deploy-monitoring.sh",
     "deploy:auth": "./scripts/deploy-auth.sh",
     "deploy:api": "./scripts/deploy-api.sh",
     "deploy:all": "./scripts/deploy-all-amplify.sh",
-    "deploy:all:s3": "./scripts/deploy-all-decoupled.sh --nextjs",
     "deploy:backend": "./scripts/deploy-amplify-backend.sh",
     "status": "./scripts/check-stack-status.sh",
     "local:install": "cd cdk/local-test && npm install",
@@ -42,6 +41,7 @@
     "local:logs": "docker logs gravyprompts-dynamodb-local",
     "local:cleanup": "./scripts/cleanup-local.sh",
     "local:test": "cd cdk/local-test && ./test-api.sh",
+    "local:test:api": "./scripts/test-local-api.sh",
     "local:test:unit": "cd cdk/lambda/templates && IS_LOCAL=true node local-test.js",
     "local:fix-auth": "./scripts/fix-local-auth.sh",
     "test:infra": "./scripts/test-infrastructure.sh",
@@ -51,7 +51,6 @@
     "destroy:monitoring": "./scripts/destroy-monitoring.sh",
     "destroy:all": "./scripts/destroy-all.sh",
     "destroy:frontend": "./scripts/destroy-frontend-stacks.sh",
-    "fix:foundation": "./scripts/fix-foundation-deletion.sh",
     "maintenance:on": "./scripts/maintenance-mode.sh on",
     "maintenance:off": "./scripts/maintenance-mode.sh off",
     "maintenance:update": "./scripts/maintenance-mode.sh update",
@@ -67,7 +66,12 @@
     "demo:setup": "cd packages/gravyjs-demo && npm run setup",
     "demo:deploy": "cd packages/gravyjs-demo && npm run deploy",
     "demo:check:redirect": "cd packages/gravyjs-demo && npm run check:redirect",
-    "demo:debug": "cd packages/gravyjs-demo && npm run debug"
+    "demo:debug": "cd packages/gravyjs-demo && npm run debug",
+    "check:amplify:app": "./scripts/check-amplify-app.sh",
+    "check:amplify:dns": "./scripts/check-amplify-dns.sh",
+    "check:amplify:domain": "./scripts/check-amplify-domain-status.sh",
+    "diagnose:stack": "./scripts/diagnose-stack.sh",
+    "protect:cert": "./scripts/protect-certificate.sh"
   },
   "dependencies": {
     "aws-amplify": "^6.15.0",
