--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "postinstall": "node scripts/setup-gravyjs.js",
-    "dev": "next dev --turbopack",
+    "dev": "echo 'Please use npm run dev:all for local development' && exit 1",
     "dev:all": "./scripts/dev-all.sh",
     "build": "next build",
     "build:all": "npm run build && cd packages/gravyjs && npm run build",
@@ -62,7 +62,18 @@
     "check:amplify:dns": "./scripts/check-amplify-dns.sh",
     "check:amplify:domain": "./scripts/check-amplify-domain-status.sh",
     "diagnose:stack": "./scripts/diagnose-stack.sh",
-    "protect:cert": "./scripts/protect-certificate.sh"
+    "protect:cert": "./scripts/protect-certificate.sh",
+    "analyze:comprehend": "./scripts/analyze-comprehend-usage.sh",
+    "templates:load": "node scripts/bulk-load-templates.js",
+    "templates:delete": "node scripts/bulk-delete-templates.js",
+    "templates:analyze": "node scripts/analyze-markdown-templates.js",
+    "templates:load:local": "node scripts/bulk-load-templates-local.js",
+    "templates:consolidate": "python scripts/consolidate-templates.py",
+    "check:templates": "./scripts/check-templates.sh",
+    "check:ssl": "./scripts/check-ssl.sh",
+    "deploy:cert": "./scripts/deploy-cert.sh",
+    "amplify:setup:cert": "./scripts/setup-amplify-custom-cert.sh",
+    "cdk:env": "source ./scripts/cdk-env.sh && env | grep -E '^(AWS_|CDK_)'"
   },
   "dependencies": {
     "aws-amplify": "^6.15.0",
@@ -72,16 +83,22 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.826.0",
+    "@aws-sdk/lib-dynamodb": "^3.826.0",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.1.2",
+    "csv-parse": "^5.6.0",
+    "csv-stringify": "^6.5.2",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "uuid": "^11.1.0"
   }
 }
