--- a/.env.example
+++ b/.env.example
@@ -33,5 +33,13 @@ ENVIRONMENT=development
 # Optional: Existing Certificate ARN (to reuse certificate)
 # CERTIFICATE_ARN=arn:aws:acm:us-east-1:123456789012:certificate/abc-def-ghi
 
+# API Configuration (set in AWS Amplify environment variables)
+# Production API Gateway URL
+NEXT_PUBLIC_API_URL=https://your-api-id.execute-api.us-east-1.amazonaws.com/production
+
+# Auth Configuration (from Cognito)
+NEXT_PUBLIC_USER_POOL_ID=us-east-1_XXXXXXXXX
+NEXT_PUBLIC_USER_POOL_CLIENT_ID=XXXXXXXXXXXXXXXXXXXXXXXXXX
+
 # Optional: Additional API Keys or Services
 # Add any additional environment variables your application needs
