--- a/cdk/local-test/docker-compose.yml
+++ b/cdk/local-test/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     ports:
       - "4566:4566"
     environment:
-      - SERVICES=cognito-idp,comprehend
+      - SERVICES=cognito-idp
       - DEBUG=1
       - DATA_DIR=/tmp/localstack/data
     volumes:
