--- a/cdk/lambda/prompts/package.json
+++ b/cdk/lambda/prompts/package.json
@@ -1,13 +1,6 @@
 {
-  "name": "shared-layer",
+  "name": "prompt-functions",
   "version": "1.0.0",
-  "description": "Shared utilities for Lambda functions",
-  "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.0.0",
-    "@aws-sdk/lib-dynamodb": "^3.0.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.0.0",
-    "uuid": "^9.0.0",
-    "dompurify": "^3.0.0",
-    "jsdom": "^23.0.0"
-  }
+  "description": "Lambda functions for user prompt management",
+  "private": true
 }
