--- a/cdk/template.yaml
+++ b/cdk/template.yaml
@@ -12,10 +12,21 @@ Globals:
       Variables:
         TEMPLATES_TABLE: local-templates
         TEMPLATE_VIEWS_TABLE: local-template-views
+        USER_PROMPTS_TABLE: local-user-prompts
         ENVIRONMENT: development
         USER_POOL_ID: local-user-pool
 
 Resources:
+  # Lambda Layer
+  SharedLayer:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      LayerName: SharedLayer
+      Description: Shared utilities and AWS SDK clients
+      ContentUri: lambda-layers/shared/
+      CompatibleRuntimes:
+        - nodejs20.x
+
   # API Gateway
   TemplatesApi:
     Type: AWS::Serverless::Api
@@ -32,6 +43,8 @@ Resources:
     Properties:
       CodeUri: lambda/templates/
       Handler: create.handler
+      Layers:
+        - !Ref SharedLayer
       Events:
         ApiEvent:
           Type: Api
@@ -45,6 +58,8 @@ Resources:
     Properties:
       CodeUri: lambda/templates/
       Handler: get.handler
+      Layers:
+        - !Ref SharedLayer
       Events:
         ApiEvent:
           Type: Api
@@ -58,6 +73,8 @@ Resources:
     Properties:
       CodeUri: lambda/templates/
       Handler: list.handler
+      Layers:
+        - !Ref SharedLayer
       Events:
         ApiEvent:
           Type: Api
@@ -71,6 +88,8 @@ Resources:
     Properties:
       CodeUri: lambda/templates/
       Handler: update.handler
+      Layers:
+        - !Ref SharedLayer
       Events:
         ApiEvent:
           Type: Api
@@ -84,6 +103,8 @@ Resources:
     Properties:
       CodeUri: lambda/templates/
       Handler: delete.handler
+      Layers:
+        - !Ref SharedLayer
       Events:
         ApiEvent:
           Type: Api
@@ -97,6 +118,8 @@ Resources:
     Properties:
       CodeUri: lambda/templates/
       Handler: share.handler
+      Layers:
+        - !Ref SharedLayer
       Events:
         ApiEvent:
           Type: Api
@@ -110,6 +133,8 @@ Resources:
     Properties:
       CodeUri: lambda/templates/
       Handler: populate.handler
+      Layers:
+        - !Ref SharedLayer
       Events:
         ApiEvent:
           Type: Api
