--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "node scripts/setup-gravyjs.js",
     "dev": "echo 'Please use npm run dev:all for local development' && exit 1",
     "dev:all": "./scripts/dev-all.sh",
+    "dev:all:empty": "./scripts/dev-all-empty.sh",
     "build": "next build",
     "build:all": "npm run build && cd packages/gravyjs && npm run build",
     "start": "next start -p 6827",
@@ -35,6 +36,8 @@
     "local:stop": "cd cdk/local-test && docker-compose down",
     "local:logs": "docker logs gravyprompts-dynamodb-local",
     "local:cleanup": "./scripts/cleanup-local.sh",
+    "local:clear": "node scripts/clear-local-db.js",
+    "local:clear:all": "node scripts/clear-local-db.js",
     "local:test": "cd cdk/local-test && ./test-api.sh",
     "local:test:api": "./scripts/test-local-api.sh",
     "local:test:unit": "cd cdk/lambda/templates && IS_LOCAL=true node local-test.js",
