Huge test suite and CI/CD pipeline with Github Actions added.

--- a/.env.example
+++ b/.env.example
@@ -9,18 +9,18 @@ NEXT_PUBLIC_ADSENSE_CLIENT_ID=ca-pub-XXXXXXXXXXXXXXXXX
 # AWS Configuration for CDK Deployment
 AWS_REGION=us-east-1
 AWS_ACCOUNT_ID=123456789012
-AWS_PROFILE=your-profile-name
+AWS_PROFILE=default
 
 # Domain Configuration
 # Your primary domain name (without www)
-DOMAIN_NAME=gravyprompts.com
+DOMAIN_NAME=yourdomain.com
 
 # CDK Configuration
 CDK_DEFAULT_ACCOUNT=123456789012
 CDK_DEFAULT_REGION=us-east-1
 
 # Application Configuration
-APP_NAME=gravy-prompts
+APP_NAME=GravyPrompts
 APP_DESCRIPTION="Store, share, populate, and rate your AI prompt templates"
 
 # AWS Stack Configuration
@@ -28,10 +28,11 @@ APP_DESCRIPTION="Store, share, populate, and rate your AI prompt templates"
 STACK_PREFIX=GRAVYPROMPTS
 
 # Optional: Environment
-ENVIRONMENT=development
+# Change when you want to create a development environment
+ENVIRONMENT=production
 
-# Optional: Existing Certificate ARN (to reuse certificate)
-# CERTIFICATE_ARN=arn:aws:acm:us-east-1:123456789012:certificate/abc-def-ghi
+# Certificate Manager (created after running npm run deploy:cert:first)
+CERTIFICATE_ARN=arn:aws:acm:us-east-1:123456789012:certificate/xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 
 # API Configuration (set in AWS Amplify environment variables)
 # Production API Gateway URL
