--- a/.env.local.example
+++ b/.env.local.example
@@ -4,15 +4,20 @@ NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 # Google AdSense
 NEXT_PUBLIC_ADSENSE_CLIENT_ID=ca-pub-XXXXXXXXXXXXXXXXX
 
-# AWS Cognito - Development
-NEXT_PUBLIC_COGNITO_USER_POOL_ID_DEV=us-east-1_XXXXXXXXX
-NEXT_PUBLIC_COGNITO_CLIENT_ID_DEV=XXXXXXXXXXXXXXXXXXXXXXXXX
-
 # AWS Cognito - Production
-NEXT_PUBLIC_COGNITO_USER_POOL_ID_PROD=us-east-1_XXXXXXXXX
-NEXT_PUBLIC_COGNITO_CLIENT_ID_PROD=XXXXXXXXXXXXXXXXXXXXXXXXX
+# Get these values from your AWS Cognito User Pool
+NEXT_PUBLIC_COGNITO_USER_POOL_ID=us-east-1_XXXXXXXXX
+NEXT_PUBLIC_COGNITO_CLIENT_ID=XXXXXXXXXXXXXXXXXXXXXXXXXX
 
-# API Gateway URL
-# For local development with SAM: http://localhost:7429
-# For AWS deployment: Get URL from 'npm run deploy:api' output
+# API Configuration
+# For local development:
 NEXT_PUBLIC_API_URL=http://localhost:7429
+SAM_LOCAL_URL=http://localhost:7429
+
+# For production (uncomment and update):
+# NEXT_PUBLIC_API_URL=https://your-api-id.execute-api.us-east-1.amazonaws.com/api/
+
+# Local Development Admin User (optional)
+# Generate a UUID for the user ID using: npx uuid
+LOCAL_ADMIN_USER_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+LOCAL_ADMIN_EMAIL=admin@example.com
