--- a/package.json
+++ b/package.json
@@ -112,9 +112,14 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.830.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.830.0",
     "@aws-sdk/client-dynamodb": "^3.826.0",
     "@aws-sdk/lib-dynamodb": "^3.826.0",
     "@eslint/eslintrc": "^3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^30.0.0",
+    "@types/jest-axe": "^3.5.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -124,6 +129,7 @@
     "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.8",
+    "jest-axe": "^10.0.0",
     "license-checker": "^25.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
