Shold be green now

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage --maxWorkers=2",
+    "test:ci": "jest --config jest.config.ci.js --ci --coverage --maxWorkers=2",
+    "test:ci:components": "jest --config jest.config.ci.js components/__tests__ --ci",
+    "test:local": "jest __tests__/security __tests__/e2e __tests__/integration",
     "test:smoke:staging": "jest __tests__/deployment/smoke-tests.test.js --testNamePattern='staging'",
     "test:smoke:production": "jest __tests__/deployment/smoke-tests.test.js --testNamePattern='production'",
     "build:cdk": "cd cdk && rm -f lib/*.d.ts lib/*.js && npm run build",
