--- a/.github/workflows/ci-cd-pipeline-minimal.yml
+++ b/.github/workflows/ci-cd-pipeline-minimal.yml
@@ -24,6 +24,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -58,6 +60,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
