--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Need full history for some checks
+          submodules: recursive # Need submodules for gravyjs package
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
