--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test:ci": "jest --config jest.config.ci.js --ci --coverage --maxWorkers=2",
     "test:ci:components": "jest --config jest.config.ci.js components/__tests__ --ci",
     "test:local": "jest __tests__/security __tests__/e2e __tests__/integration",
+    "test:e2e": "jest __tests__/e2e --runInBand",
     "test:smoke:staging": "jest __tests__/deployment/smoke-tests.test.js --testNamePattern='staging'",
     "test:smoke:production": "jest __tests__/deployment/smoke-tests.test.js --testNamePattern='production'",
     "build:cdk": "cd cdk && rm -f lib/*.d.ts lib/*.js && npm run build",
@@ -57,6 +58,7 @@
     "test:backend:coverage": "cd cdk && npm run test:coverage",
     "verify:local": "node scripts/verify-local-config.js",
     "fix:local-config": "node scripts/fix-local-config.js",
+    "analyze:costs": "node scripts/analyze-costs.js",
     "local:clear": "node scripts/clear-local-db.js",
     "local:clear:all": "node scripts/clear-local-db.js",
     "local:test": "cd cdk/local-test && ./test-api.sh",
