--- a/.github/workflows/scheduled-tasks.yml
+++ b/.github/workflows/scheduled-tasks.yml
@@ -6,9 +6,6 @@ on:
     - cron: '0 2 * * 0'
   workflow_dispatch: # Allow manual triggering
 
-# Workflow-level timeout (2 hours max for maintenance tasks)
-timeout-minutes: 120
-
 env:
   NODE_VERSION: '20'
   AWS_REGION: 'us-east-1'
@@ -46,7 +43,6 @@ jobs:
       
       - name: Check for outdated dependencies
         run: |
-          npx npm-check-updates -u --target minor
           npm outdated > outdated-deps.txt || true
       
       - name: Create security report issue
@@ -57,7 +53,7 @@ jobs:
             const audit = JSON.parse(fs.readFileSync('security-audit.json', 'utf8'));
             const outdated = fs.readFileSync('outdated-deps.txt', 'utf8');
             
-            if (audit.metadata.vulnerabilities.total > 0 || outdated.length > 100) {
+            if (audit.metadata.vulnerabilities.total > 0 || outdated.trim().length > 0) {
               github.rest.issues.create({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -157,7 +153,7 @@ jobs:
             --metric-name ConsumedReadCapacityUnits \
             --dimensions Name=TableName,Value=templates \
             --statistics Sum \
-            --start-time $(date -u -d '7 days ago' +%Y-%m-%dT%H:%M:%S) \
+            --start-time $(date -u -d '7 days ago' +%Y-%m-%dT%H:%M:%S 2>/dev/null || date -u -v-7d +%Y-%m-%dT%H:%M:%S) \
             --end-time $(date -u +%Y-%m-%dT%H:%M:%S) \
             --period 86400 > dynamodb-usage.json
           
