--- a/cdk/package.json
+++ b/cdk/package.json
@@ -14,7 +14,7 @@
     "validate": "npm run build && npx ts-node --prefer-ts-exts src/validate-stacks.ts",
     "predeploy": "npm run validate",
     "test": "npm run test:unit && npm run test:integration",
-    "test:unit": "jest --config=jest.config.unit.js",
+    "test:unit": "JEST_CONFIG_TYPE=unit jest",
     "test:integration": "jest --config=jest.config.integration.js --runInBand",
     "test:watch": "jest --config=jest.config.unit.js --watch",
     "test:coverage": "jest --config=jest.config.unit.js --coverage",
